Fix compilation error in OntologyService and InsertPropagatedCalls following modification of RawDataConditionDAO